fixed h1 spacing

--- a/public/assets/css/burger-style.css
+++ b/public/assets/css/burger-style.css
@@ -9,6 +9,7 @@ h1 {
   font-family: "Spicy Rice", cursive;
   text-align: center;
   font-size: 60px;
+  letter-spacing: 4px;
   margin: 10px auto;
 }
 h2 {
